fix(checkboxButton): no need to use a file for the template
also fixes odd issue with minification removing end of file new line which was being translated to extra padding in the filters

--- a/app/components/PostList/_postlist.sass
+++ b/app/components/PostList/_postlist.sass
@@ -29,6 +29,9 @@
 .post-filters
     +watercolour-black()
 
+    button
+        margin-right: 5px
+
     .filter
         margin-bottom: 10px
 
